compiler/tests/en/errors/dead_repeat.salam
// EXPECT: E068
func main:
    repeat 0:
        println "never"
    end
end
